--- a/DynamicCollectionViewSample/DynamicImageCell.xib
+++ b/DynamicCollectionViewSample/DynamicImageCell.xib
@@ -10,32 +10,39 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DynamicImageCell" customModule="DynamicCollectionViewSample" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DynamicImageCell" id="gTV-IL-0wX" customClass="DynamicImageCell" customModule="DynamicCollectionViewSample" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="157" height="130"/>
+            <rect key="frame" x="0.0" y="0.0" width="438" height="130"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="157" height="130"/>
+                <rect key="frame" x="0.0" y="0.0" width="438" height="130"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="H0R-4D-Ob5">
-                        <rect key="frame" x="0.0" y="0.0" width="157" height="130"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="H0R-4D-Ob5">
+                        <rect key="frame" x="0.0" y="0.0" width="438" height="130"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="157" id="71k-27-W6g"/>
+                            <constraint firstAttribute="height" constant="130" id="Fjx-rM-ri1"/>
+                            <constraint firstAttribute="width" constant="438" id="vIj-H2-oPq"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Fjx-rM-ri1"/>
+                            </mask>
+                        </variation>
                     </imageView>
                 </subviews>
             </view>
+            <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="H0R-4D-Ob5" secondAttribute="trailing" id="042-DA-3bW"/>
-                <constraint firstItem="H0R-4D-Ob5" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="anj-5G-lm8"/>
-                <constraint firstItem="H0R-4D-Ob5" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="lC6-Ya-IDl"/>
-                <constraint firstAttribute="bottom" secondItem="H0R-4D-Ob5" secondAttribute="bottom" id="lib-yC-aUQ"/>
+                <constraint firstItem="H0R-4D-Ob5" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="FCA-gZ-HuP"/>
+                <constraint firstAttribute="trailing" secondItem="H0R-4D-Ob5" secondAttribute="trailing" id="cCv-0g-Ecc"/>
+                <constraint firstAttribute="bottom" secondItem="H0R-4D-Ob5" secondAttribute="bottom" id="jyu-a2-5us"/>
+                <constraint firstItem="H0R-4D-Ob5" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="kdM-uv-7yR"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="157" height="130"/>
+            <size key="customSize" width="438" height="130"/>
             <connections>
                 <outlet property="dynamicImageView" destination="H0R-4D-Ob5" id="XBr-S0-Mga"/>
             </connections>
-            <point key="canvasLocation" x="7.9710144927536239" y="134.59821428571428"/>
+            <point key="canvasLocation" x="211.59420289855075" y="134.59821428571428"/>
         </collectionViewCell>
     </objects>
 </document>
