--- a/DynamicCollectionViewSample/DynamicImageCell.xib
+++ b/DynamicCollectionViewSample/DynamicImageCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="438" height="130"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="H0R-4D-Ob5">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="H0R-4D-Ob5">
                         <rect key="frame" x="0.0" y="0.0" width="438" height="130"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="130" id="Fjx-rM-ri1"/>
